<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.axatech.authentication</groupId>
    <artifactId>openam-frontend-api</artifactId>
    <version>1.4.2</version>
	  <packaging>war</packaging>
	
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>1.5.2.RELEASE</version>
    </parent>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
        	<groupId>io.springfox</groupId>
        	<artifactId>springfox-swagger2</artifactId>
        	<version>2.6.1</version>
        </dependency>
        <dependency>
        	<groupId>io.springfox</groupId>
        	<artifactId>springfox-swagger-ui</artifactId>
        	<version>2.6.1</version>
        </dependency>
        <dependency>
        	<groupId>org.springframework.ldap</groupId>
        	<artifactId>spring-ldap-core</artifactId>
        	</dependency>
        <dependency>
        	<groupId>org.springframework.ldap</groupId>
        	<artifactId>spring-ldap-test</artifactId>
        </dependency>
        <dependency>
        	<groupId>org.springframework.boot</groupId>
        	<artifactId>spring-boot-starter-test</artifactId>
        </dependency>
        <dependency>
        	<groupId>com.unboundid</groupId>
        	<artifactId>unboundid-ldapsdk</artifactId>
        </dependency>
        <dependency>  
        	<groupId>com.xebialabs.restito</groupId>  
        	<artifactId>restito</artifactId>  
        	<version>0.8.2</version>  
        	<scope>test</scope>  
   		</dependency>
    </dependencies>

    <properties>
        <java.version>1.8</java.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
